--- a/client/app/views/mic/sesionaprendizaje/list.html
+++ b/client/app/views/mic/sesionaprendizaje/list.html
@@ -62,12 +62,11 @@
             <td data-title="'N° Horas Teoria'">{{item.horas_teoria}}</td>
             <td data-title="'N° Horas Práctica'">{{item.horas_practica}}</td>
             <td data-title="'N° Horas Laboratorio'">{{item.horas_laboratorio}}</td>
-            <td data-title="'Revisión'">
-              <span class="fa-stack" ng-if="item.existsAsignatura">
-                <i class="fa fa-square fa-stack-2x tc-green-500"></i>
-                <i class="fa fa-check  fa-stack-1x fa-inverse tc-white"></i>
-              </span>
+            <td data-title="'Sesiones de Aprendizaje'">
+              <br>Juan Perez Gonzales
+              <br>Miguel Cortez Rodriguez
             </td>
+          
 
         </tr>
 
@@ -91,39 +90,11 @@
     </tr>
   </tbody>
 </table>
-<div  flex-container="row" flex-gutter="24">
-    <div flex-item>
-<md-input-container class="md-block">
-  <label>Comentarios</label>
-  <textarea ng-model="user.biography" columns="1" md-maxlength="150" rows="3"></textarea>
-</md-input-container>
-</md-content>
-</div>
-</DIV>
+
 </div>
 
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="UI.editMode" ng-click="RevisarPlan($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
+<md-button ng-if="UI.editMode" ng-click="Edit($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
   <md-tooltip md-direction="left">Validar Silabus</md-tooltip>
   <md-icon md-font-icon="fa fa fa-eye fa-lg"></md-icon>
 </md-button>
-<!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="!UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
- <md-fab-trigger>
-   <md-button aria-label="menu" class="md-fab md-warn">
-     <md-tooltip md-direction="left">Opciones</md-tooltip>
-     <md-icon md-font-icon="fa fa-navicon fa-lg tc-white"></md-icon>
-   </md-button>
- </md-fab-trigger>
- <md-fab-actions>
-   <md-button ng-if="!UI.editMode" ng-click="RevisarPlan($event)" class="md-fab md-raised md-mini"  aria-label="{{UI.message.Buttons.New}}" >
-     <md-tooltip md-direction="left">Validar Plan de Estudios</md-tooltip>
-     <md-icon md-font-icon="fa fa-check fa-lg tc-red-500"></md-icon>
-   </md-button>
-   <md-button ng-if="!UI.editMode" ng-click="Print($event)" class="md-fab md-raised md-mini"  aria-label="{{UI.message.Buttons.New}}" >
-     <md-tooltip md-direction="left">Imprimir</md-tooltip>
-     <md-icon md-font-icon="fa fa-print fa-lg tc-red-500"></md-icon>
-   </md-button>
-
- </md-fab-actions>
-</md-fab-speed-dial>
