--- a/client/app/views/planestudiodetalles/list.html
+++ b/client/app/views/planestudiodetalles/list.html
@@ -1,5 +1,5 @@
 <md-subheader class="md-primary " style="margin-right: 0">
-<h3>{{UI.title}}</h3>
+<h3><a ui-sref="app.planestudios"><i class="fa fa-arrow-left tc-green-500"></i></a> {{UI.title}} {{UI.planestudios._escuela.nombre}} {{UI.planestudios._periodo.anio}}-{{UI.planestudios._periodo.periodo}}</h3>
 </md-subheader>
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
 <md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
