--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -3,7 +3,7 @@
     <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
   </md-button>
   <h2>
-    <span class="app-title">{{app.name}}</span> <span class="app-title-module">{{app.module}}</span>
+    <span class="app-title">{{app.name}}</span> <span class="hidden-xs">{{app.module}}</span>
   </h2>
   <span flex></span>
 
